fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -1,41 +1,57 @@
-html,body,.global-container{
-    margin: 0%;
+html{
+    height: 100%;
+    margin: 0;
 }
 
-.global-container{
-    height: 100vh;
-    width: 100%;
+body{
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0;
+    z-index: 10;
 }
 
 header{
-    height: 20vh;
     width: 100%;
+    height: 15vh;
     display: grid;
     grid-template-columns: 1fr 2fr;
+    border-bottom: 2px solid #36454F;
+    z-index: 50;
+    position: fixed;
+}
+
+header>.left>img{
+    height: 15vh;
+    width: 100%;
 }
 
 header>.right{
     display:flex ;
     justify-content: center;
     align-items: center;
+    height: 15vh;
     text-shadow: 1px 1px;
-    font-size:x-large ;
-    border-bottom: 2px solid black;
+    font-size:x-large;
     background-color: #CCCCFF;
+}
+
+main{
+    margin-top: 15vh;
+    height: 85vh;
 }
 
 .info-container{
     display: grid;
     grid-template-columns: 1fr 5fr;
-}
-
-.contents{
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 .section-container{
-    min-height: 100vh;
-    margin: 12px;
+    height: 85vh;
+    padding: 12px;
+    overflow-y: auto;
 }
 
 .section-child{
@@ -51,11 +67,11 @@ header>.right{
     justify-content:space-between;
     align-items:start;
     row-gap: 12px;
-    margin: 0%;
+    margin: 0;
 }
 
 .section-child>.heading-container>h1,.section-child>.heading-container>h3{
-    margin: 0%;
+    margin: 0;
 }
 
 .section-child>.heading-container>h3{
@@ -75,6 +91,14 @@ header>.right{
 
 .contents-sidebar{
     background-color: #CCCCFF;
+    height: 85vh;
+}
+
+footer{
+    min-height: 20vh;
+    border-top:2px solid #36454F;
+    background-color: #6247aa;
+background-image: linear-gradient(316deg, #6247aa 0%, #a594f9 74%);
 }
 
 
